Payment Methods Card intigratinon

--- a/app/src/main/res/layout/activity_addpayment_method.xml
+++ b/app/src/main/res/layout/activity_addpayment_method.xml
@@ -235,6 +235,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/layoutCCard"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_8sdp"
