--- a/app/src/main/res/layout/activity_add_new_debit_card2.xml
+++ b/app/src/main/res/layout/activity_add_new_debit_card2.xml
@@ -4,69 +4,69 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
     android:orientation="vertical"
-    android:padding="@dimen/_20sdp">
+    android:padding="@dimen/_20sdp"
+    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="none"
-        >
+        android:scrollbars="none">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_65sdp"
-        android:orientation="horizontal"
-        >
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_chevron_left"
-            android:layout_marginTop="@dimen/_45sdp"
-            />
-        <View
-            android:layout_width="@dimen/_83sdp"
-            android:layout_height="@dimen/_4sdp"
-            android:background="@drawable/bg_core_new_4r_colorfill"
-            android:layout_gravity="center"
-            android:layout_marginTop="@dimen/_45sdp"
-            android:layout_marginLeft="@dimen/_26sdp"
-            android:layout_marginBottom="@dimen/_28sdp"
-            />
-        <View
-            android:layout_width="@dimen/_83sdp"
-            android:layout_height="@dimen/_4sdp"
-            android:background="@drawable/bg_core_colorfill"
-            android:layout_gravity="center"
-            android:layout_marginTop="@dimen/_45sdp"
-            android:layout_marginLeft="@dimen/_14sdp"
-            android:layout_marginBottom="@dimen/_28sdp"
-            />
-    </LinearLayout>
-            <TextView
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Add New Debit Card"
-                android:fontFamily="@font/opensans_bold"
-                android:textSize="@dimen/_16ssp"
-                android:textColor="@color/black"
-                android:layout_marginTop="@dimen/_14sdp"
-                />
+                android:layout_height="@dimen/_65sdp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_45sdp"
+                    android:src="@drawable/ic_chevron_left" />
+
+                <View
+                    android:layout_width="@dimen/_83sdp"
+                    android:layout_height="@dimen/_4sdp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="@dimen/_26sdp"
+                    android:layout_marginTop="@dimen/_45sdp"
+                    android:layout_marginBottom="@dimen/_28sdp"
+                    android:background="@drawable/bg_core_new_4r_colorfill" />
+
+                <View
+                    android:layout_width="@dimen/_83sdp"
+                    android:layout_height="@dimen/_4sdp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="@dimen/_14sdp"
+                    android:layout_marginTop="@dimen/_45sdp"
+                    android:layout_marginBottom="@dimen/_28sdp"
+                    android:background="@drawable/bg_core_colorfill" />
+            </LinearLayout>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Please confirm your billing address"
-                android:textSize="@dimen/_12ssp"
-                android:fontFamily="@font/opensans_semibold"
-                android:textColor="@color/primary_black"
-                android:layout_marginBottom="@dimen/_18sdp"
                 android:layout_marginTop="@dimen/_14sdp"
+                android:fontFamily="@font/opensans_bold"
+                android:text="Add New Debit Card"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_16ssp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_4sdp"
-                />
+                android:layout_marginTop="@dimen/_14sdp"
+                android:layout_marginBottom="@dimen/_18sdp"
+                android:fontFamily="@font/opensans_semibold"
+                android:text="Please confirm your billing address"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_12ssp" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/firstNameTIL1"
@@ -176,8 +176,9 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/_14sdp"
-                android:layout_marginTop="@dimen/_16sdp">
+                android:layout_marginTop="@dimen/_16sdp"
+                android:layout_marginBottom="@dimen/_14sdp">
+
                 <ImageButton
                     android:id="@+id/imageButton"
                     android:layout_width="wrap_content"
@@ -193,44 +194,42 @@
                     app:layout_editor_absoluteX="336.24dp"
                     app:layout_editor_absoluteY="26.28dp" />
 
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/firstNameTIL8"
-                        style="@style/TextInputLayout.OutlinedBox"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/firstNameTIL8"
+                    style="@style/TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_14sdp"
+                    android:hint="State"
+                    android:textColorHint="@color/black"
+                    app:boxStrokeColor="@color/primary_green"
+                    app:errorIconDrawable="@null"
+                    app:expandedHintEnabled="false"
+                    app:hintTextColor="@color/primary_green"
+                    tools:ignore="MissingConstraints">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/firstNameET8"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_14sdp"
-                        android:hint="State"
-                        android:textColorHint="@color/black"
-                        app:boxStrokeColor="@color/primary_green"
-                        app:errorIconDrawable="@null"
-                        app:expandedHintEnabled="false"
-                        app:hintTextColor="@color/primary_green"
-                        tools:ignore="MissingConstraints">
+                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:hint="CA"
+                        android:imeOptions="actionNext"
+                        android:inputType="text|textNoSuggestions"
+                        android:maxLength="30"
+                        android:maxLines="1"
+                        android:padding="@dimen/_14sdp"
+                        android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
+                        android:singleLine="true"
+                        android:textColor="@color/text_color"
+                        android:textColorHint="@color/light_gray"
+                        android:textCursorDrawable="@drawable/cursor_color"
+                        android:textIsSelectable="false"
+                        android:textSize="@dimen/_12ssp" />
 
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/firstNameET8"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
-                            android:fontFamily="@font/opensans_semibold"
-                            android:hint="CA"
-                            android:imeOptions="actionNext"
-                            android:inputType="text|textNoSuggestions"
-                            android:maxLength="30"
-                            android:maxLines="1"
-                            android:padding="@dimen/_14sdp"
-                            android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
-                            android:singleLine="true"
-                            android:textColor="@color/text_color"
-                            android:textColorHint="@color/light_gray"
-                            android:textCursorDrawable="@drawable/cursor_color"
-                            android:textIsSelectable="false"
-                            android:textSize="@dimen/_12ssp" />
-
-                    </com.google.android.material.textfield.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/firstNameTIL5"
@@ -265,6 +264,7 @@
                     android:textSize="@dimen/_12ssp" />
 
             </com.google.android.material.textfield.TextInputLayout>
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/firstNameTIL7"
                 style="@style/TextInputLayout.OutlinedBox"
@@ -300,30 +300,28 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/nextCV"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            app:cardBackgroundColor="@color/primary_color"
-            android:gravity="center"
-            app:cardCornerRadius="20dp"
-            android:layout_marginTop="@dimen/_43sdp"
-            >
-            <TextView
-                android:id="@+id/home"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/nextCV"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Add Card"
-                android:textColor="@color/white"
+                android:layout_height="50dp"
+                android:layout_marginTop="@dimen/_43sdp"
                 android:gravity="center"
-                android:textSize="@dimen/_12ssp"
-                android:fontFamily="@font/opensans_bold"
-                android:layout_gravity="center"
-                />
-        </androidx.cardview.widget.CardView>
+                app:cardBackgroundColor="@color/primary_color"
+                app:cardCornerRadius="20dp">
 
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/home"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/opensans_bold"
+                    android:gravity="center"
+                    android:text="Add Card"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_12ssp" />
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
     </ScrollView>
 
 </LinearLayout>
