--- a/app/src/main/res/layout/activity_identity_veri_sucessful.xml
+++ b/app/src/main/res/layout/activity_identity_veri_sucessful.xml
@@ -7,81 +7,77 @@
     android:orientation="vertical"
     android:background="@color/white"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="none">
+
     <LinearLayout
         android:id="@+id/idveriSuccessLL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-    <ImageView
-        android:id="@+id/closeBtnUnderReview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_close"
-        android:layout_marginStart="@dimen/_21sdp"
-        android:layout_marginTop="@dimen/_45sdp"
-        />
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_success_icon"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/_31sdp"
 
-        />
-    <TextView
-        android:layout_width="@dimen/_200sdp"
-        android:layout_height="wrap_content"
-        android:text="@string/iv_success"
-        android:textSize="@dimen/_16ssp"
-        android:layout_marginEnd="@dimen/_21sdp"
-        android:layout_marginStart="@dimen/_21sdp"
 
-        android:textColor="@color/primary_black"
-        android:textAlignment="center"
-        android:layout_gravity="center"
-        android:layout_marginTop="30.5dp"
-        android:fontFamily="@font/opensans_bold"
-        />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/iv_success_content"
-        android:textSize="@dimen/_12ssp"
-        android:textColor="@color/primary_black"
-        android:layout_marginLeft="@dimen/_21sdp"
-        android:layout_marginRight="@dimen/_21sdp"
-        android:layout_marginTop="@dimen/_21sdp"
-        android:textAlignment="center"
-        android:fontFamily="@font/opensans_regular"
-        />
-    <androidx.cardview.widget.CardView
-        android:id="@+id/idveriDoneBtn"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_43sdp"
-        android:layout_marginTop="@dimen/_120sdp"
-        android:layout_marginStart="@dimen/_21sdp"
-        android:layout_marginEnd="@dimen/_21sdp"
-        app:cardBackgroundColor="@color/primary_color"
-        app:cardCornerRadius="@dimen/_21sdp"
-        android:layout_marginBottom="21dp"
-        >
-        <TextView
+        <ImageView
+            android:id="@+id/closeBtnUnderReview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/done"
+            android:layout_marginStart="@dimen/_21sdp"
+            android:layout_marginTop="@dimen/_45sdp"
+            android:src="@drawable/ic_close" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_success_icon"
             android:layout_gravity="center"
-            android:textColor="@color/white"
-            android:textSize="@dimen/_12ssp"
+            android:layout_marginTop="@dimen/_31sdp"
+
+            />
+        <TextView
+            android:layout_width="@dimen/_200sdp"
+            android:layout_height="wrap_content"
+            android:text="@string/iv_success"
+            android:textSize="@dimen/_16ssp"
+            android:layout_marginEnd="@dimen/_21sdp"
+            android:layout_marginStart="@dimen/_21sdp"
+
+            android:textColor="@color/primary_black"
+            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:layout_marginTop="30.5dp"
             android:fontFamily="@font/opensans_bold"
             />
-    </androidx.cardview.widget.CardView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/iv_success_content"
+            android:textSize="@dimen/_12ssp"
+            android:textColor="@color/primary_black"
+            android:layout_marginLeft="@dimen/_21sdp"
+            android:layout_marginRight="@dimen/_21sdp"
+            android:layout_marginTop="@dimen/_21sdp"
+            android:textAlignment="center"
+            android:fontFamily="@font/opensans_regular"
+            />
+        <androidx.cardview.widget.CardView
+            android:id="@+id/idveriDoneBtn"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_43sdp"
+            android:layout_marginTop="@dimen/_120sdp"
+            android:layout_marginStart="@dimen/_21sdp"
+            android:layout_marginEnd="@dimen/_21sdp"
+            app:cardBackgroundColor="@color/primary_color"
+            app:cardCornerRadius="@dimen/_21sdp"
+            android:layout_marginBottom="21dp"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/done"
+                android:layout_gravity="center"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_12ssp"
+                android:fontFamily="@font/opensans_bold"
+                />
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
-    </ScrollView>
-
 
 </LinearLayout>
