--- a/app/src/main/res/layout/activity_cards_authorization_failed.xml
+++ b/app/src/main/res/layout/activity_cards_authorization_failed.xml
@@ -1,77 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/_20sdp">
-    <RelativeLayout
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-     >
-        <LinearLayout
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:scrollbars="none">
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:orientation="vertical">
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_failed"
-        android:layout_marginTop="@dimen/_102sdp"
-        android:layout_marginLeft="@dimen/_64sdp"
-        android:layout_marginBottom="@dimen/_35sdp"
-        />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Authorization Failed"
-        android:gravity="center"
-        android:textColor="@color/black"
-        android:fontFamily="@font/opensans_bold"
-        android:textSize="@dimen/_16ssp"
-        android:layout_marginBottom="@dimen/_21sdp"
-        />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/_12ssp"
-        android:text="You failed the authorization attempt due to \nfraudulent concerns. For security reasons\n
+            android:layout_height="match_parent">
+
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/tvHead"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="@dimen/_35sdp"
+                android:src="@drawable/ic_failed" />
+
+            <TextView
+                android:id="@+id/tvHead"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginBottom="@dimen/_21sdp"
+                android:fontFamily="@font/opensans_bold"
+                android:text="Authorization Failed"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_16ssp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvHead"
+                android:fontFamily="@font/opensans_regular"
+                android:gravity="center"
+                android:text="You failed the authorization attempt due to \nfraudulent concerns. For security reasons\n
 this account and associated email address, \nphone number, and credit/debit card\n
 number have locked. You will need to \ncontact Coyni customer support to unlock"
-        android:gravity="center"
-        android:textColor="@color/primary_black"
-        android:fontFamily="@font/opensans_regular"
-        />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:orientation="vertical">
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_12ssp" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/nextCV"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_50sdp"
-        app:cardBackgroundColor="@color/primary_green"
-        android:gravity="center"
-        app:cardCornerRadius="@dimen/_20sdp"
-        android:layout_marginTop="@dimen/_125sdp"
-        >
-        <TextView
-            android:id="@+id/home"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Done"
-            android:textColor="@color/white"
-            android:gravity="center"
-            android:fontFamily="@font/opensans_bold"
-            android:layout_gravity="center"
-            />
-    </androidx.cardview.widget.CardView>
-        </LinearLayout>
 
-    </RelativeLayout>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cvDone"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_50sdp"
+                android:layout_alignParentBottom="true"
+                android:gravity="center"
+                app:cardBackgroundColor="@color/primary_green"
+                app:cardCornerRadius="@dimen/_20sdp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/opensans_bold"
+                    android:gravity="center"
+                    android:text="Done"
+                    android:textColor="@color/white" />
+            </androidx.cardview.widget.CardView>
+
+        </RelativeLayout>
+    </ScrollView>
 </LinearLayout>
