--- a/app/src/main/res/layout/preauthorization.xml
+++ b/app/src/main/res/layout/preauthorization.xml
@@ -56,6 +56,7 @@
                     android:src="@drawable/ic_preauth"></ImageView>
 
                 <TextView
+                    android:id="@+id/tvMessage"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_15sdp"
