--- a/app/src/main/res/layout/activity_customer_profile.xml
+++ b/app/src/main/res/layout/activity_customer_profile.xml
@@ -225,7 +225,7 @@
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cardviewYourAccount"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/cardviewProfile"
                     android:layout_marginLeft="@dimen/_11sdp"
@@ -245,7 +245,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/_15sdp"
-                            android:orientation="vertical">
+                            android:orientation="vertical"
+                            android:layout_weight="1">
 
                             <TextView
                                 android:layout_width="wrap_content"
