--- a/app/src/main/res/layout/activity_transaction_details.xml
+++ b/app/src/main/res/layout/activity_transaction_details.xml
@@ -62,16 +62,16 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_alignParentStart="true"
-                        android:layout_toLeftOf="@id/filterIconIV"
                         android:layout_marginStart="@dimen/_8sdp"
+                        android:layout_toLeftOf="@id/filterIconIV"
+                        android:cursorVisible="false"
                         android:hint="Merchant’s Name/Reference No."
+                        android:maxLines="1"
+                        android:singleLine="true"
                         android:textColor="@color/primary_black"
                         android:textColorHint="@color/dark_grey"
-                        android:textSize="@dimen/_10ssp"
-                        android:singleLine="true"
-                        android:maxLines="1"
-                        android:cursorVisible="false"
                         android:textCursorDrawable="@drawable/cursor_color_text"
+                        android:textSize="@dimen/_10ssp"
                         android:theme="@style/Widget.MaterialComponents.Button.OutlinedButton" />
 
                     <View
@@ -97,45 +97,103 @@
     </LinearLayout>
 
 
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedSV"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+    <TextView
+        android:id="@+id/pendingTV"
+        android:layout_width="match_parent"
+        android:layout_height="27dp"
+        android:layout_marginTop="@dimen/_14sdp"
+        android:background="#f2f4f5"
+        android:fontFamily="@font/opensans_bold"
+        android:gravity="center_vertical"
+        android:paddingLeft="15dp"
+        android:text="Pending"
+        android:textColor="@color/primary_black"
+        android:textSize="@dimen/text_size_14sp"
+        android:visibility="gone" />
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/refreshLayout"
+
+    <LinearLayout
+        android:id="@+id/layoutLLPending"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/pbLoader"
-        android:layout_below="@+id/layoutTop">
+        android:layout_marginStart="@dimen/_11sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_11sdp"
+        android:orientation="vertical"
+        android:visibility="visible">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/transactionListRV"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:clipToPadding="false"
-            android:divider="@null"
-            android:nestedScrollingEnabled="false"
-            android:overScrollMode="never"
-            android:scrollbars="none" />
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-<!--    <androidx.recyclerview.widget.RecyclerView-->
-<!--        android:id="@+id/transactionListRV"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="@dimen/_11sdp"-->
-<!--        android:layout_marginEnd="@dimen/_11sdp"-->
-<!--        android:paddingStart="@dimen/_11sdp"-->
-<!--        />-->
+            android:layout_marginBottom="@dimen/_2sdp"
+            app:cardCornerRadius="@dimen/_10sdp">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/transactionListPendingRV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:clipToPadding="false"
+                android:divider="@null"
+                android:nestedScrollingEnabled="false"
+                android:overScrollMode="never"
+                android:scrollbars="none" />
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layoutLLposted"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="@dimen/_11sdp"
+        android:layout_marginTop="@dimen/_11sdp"
+        android:layout_marginEnd="@dimen/_11sdp"
+        android:orientation="vertical"
+        android:visibility="visible">
+
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/_2sdp"
+            app:cardCornerRadius="@dimen/_10sdp">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/transactionListPostedRV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clipToPadding="false"
+                android:divider="@null"
+                android:nestedScrollingEnabled="false"
+                android:overScrollMode="never"
+                android:scrollbars="none" />
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
     <TextView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:text="You have no transactions"
-    android:gravity="center"
-    android:visibility="gone"
-    android:fontFamily="@font/opensans_regular"
-    android:textColor="@color/dark_grey"
-    android:textSize="@dimen/_10ssp"
-
-    />
-
+        android:id="@+id/noTransactions"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fontFamily="@font/opensans_regular"
+        android:gravity="center"
+        android:text="You have no transactions"
+        android:textColor="@color/dark_grey"
+        android:textSize="@dimen/_10ssp"
+        android:visibility="gone" />
+            <ProgressBar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/progressBarLoadMore"
+                />
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 
 </LinearLayout>
